2009-08-05 Michael Stephenson <mickstephenson at googlemail.com>

    * src/gtk-sat-module-popup.c:
    * src/sat-pref-rot-editor.c:
    * src/trsp-conf.c:
    * src/save-pass.c:
    * src/sat-pref-qth-editor.c:
    * src/gtk-rig-ctrl.c:
    * src/mod-cfg.c:
    * src/qth-editor.c:
    * src/sat-pref-rig-editor.c:
    * src/gtk-rot-ctrl.c:
    Spelling corrections.

    * po/en_US.po:
    * po/en_GB.po:
    US and British translations.

2009-08-04 Alexandru Csete <oz9aec at gmail.com>

    * data/satdata/*.sat:
    * data/satdata/*.cat:
    New satellite data files. Old TLE files removed.
    
    * data/trsp/*.trsp:
    Moved TRSP files.
    
    * configure.ac:
    * data/Makefile.am
    * data/satdata/Makefile.am:
    * data/trsp/Makefile.am:
    Updated to take new data files and organization into account.

    * src/compat.[ch]:
    Changed functions to transition to new configuration files.


2009-08-03 Alexandru Csete <oz9aec at gmail.com>

    * src/Makefile.am:
    * src/qth-data.[ch]:
    * src/gtk-sat-module.[ch]:
    * src/qth-editor.[ch]:
    * src/sat-pref-qth.c:
    Separate QTH data I/O from SAT data I/O.

    * src/sat-data.[ch]:
    New files implementing the new .sat file I/O (replacing gtk-sat-data).


2009-07-31 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-list.c:
    Fixed sorting algorithm for AOS and LOS columns (bug #2116693).


2009-05-24 Alexandru Csete <oz9aec at gmail.com>

    * src/sat-pref-single-sat.c:
    Use field text instead of field hint for checkbox label. Use the hints for
    tooltip text.

    * src/gtk-single-sat.c:
    Don't include ":" in field label since it is also used in preferences dialog.

    * src/gtk-rig-ctrl.c:
    Added delay between set_freq() and get_freq() to avoid reading back the frequency
    too soon. Changed packing options to include GTK_EXPAND.


2009-05-23 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rig-ctrl.c: